[gd_scene load_steps=5 format=3 uid="uid://c80tppegim63h"]

[ext_resource type="Texture2D" uid="uid://b1mmqqyj42mi4" path="res://assets/boss/boss.png" id="1_bcr0o"]
[ext_resource type="Script" path="res://scripts/boss.gd" id="1_kt6gl"]
[ext_resource type="FontFile" uid="uid://bgyvp4lmd3c4y" path="res://assets/fonts/thintel/Thintel.ttf" id="3_yr230"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0hhw"]
size = Vector2(16, 8)

[node name="boss" type="Area2D"]
scale = Vector2(3, 3)
collision_layer = 64
collision_mask = 2
script = ExtResource("1_kt6gl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_bcr0o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_a0hhw")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.166667, 2.38419e-07)
scale = Vector2(0.816667, 0.4)

[node name="labelScore" type="Label" parent="."]
visible = false
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -12.0
offset_right = 14.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.671875, 0.195313, 0.195313, 1)
theme_override_fonts/font = ExtResource("3_yr230")
theme_override_font_sizes/font_size = 16
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
